tooling/nargo_cli/tests/snapshots/execution_success/databus/execute__tests__force_brillig_true_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[databus] Circuit output: Field(9)
----- stderr -----
warning: Unsafe block must have a safety comment above it
  ┌─ src/main.nr:3:5
  │
3 │     unsafe {
  │     ------ The comment must start with the "Safety: " word
  │
